restricted access to management view controllers

--- a/casadocodigo/Interface/Base.lproj/Main.storyboard
+++ b/casadocodigo/Interface/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </toolbar>
                     <connections>
-                        <segue destination="jKO-ab-6Kt" kind="relationship" relationship="rootViewController" id="GVK-Cj-Dh7"/>
+                        <segue destination="pTB-BC-bOT" kind="relationship" relationship="rootViewController" id="ozw-Pv-OqY"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="biz-yC-PfH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -52,7 +52,7 @@
         <!--Sign In-->
         <scene sceneID="ZsE-SV-ZbN">
             <objects>
-                <viewController id="jKO-ab-6Kt" userLabel="Sign In" customClass="SignInViewController" customModule="casadocodigo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SignInViewController" id="jKO-ab-6Kt" userLabel="Sign In" customClass="SignInViewController" customModule="casadocodigo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="wJx-b7-lcM">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
