--- a/casadocodigo/Interface/Base.lproj/Main.storyboard
+++ b/casadocodigo/Interface/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--Livros-->
         <scene sceneID="xaS-Cm-Tjc">
             <objects>
-                <navigationController id="2zo-8l-zRe" customClass="CDCNavigationController" customModule="casadocodigo" customModuleProvider="target" sceneMemberID="viewController">
+                <navigationController id="2zo-8l-zRe" customClass="CustomNavigationController" customModule="casadocodigo" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Livros" image="book.closed.fill" catalog="system" id="1Bw-Tx-AUd"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="qjY-jH-kgk">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -53,7 +53,7 @@
         <!--Autores-->
         <scene sceneID="3j2-UB-fja">
             <objects>
-                <navigationController id="2v0-jf-elc" customClass="CDCNavigationController" customModule="casadocodigo" customModuleProvider="target" sceneMemberID="viewController">
+                <navigationController id="2v0-jf-elc" customClass="CustomNavigationController" customModule="casadocodigo" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Autores" image="person.2.fill" catalog="system" id="fQe-yL-2Ee"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="fvX-dZ-7QJ">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
